# licelfile-py

./: .gitignore  API.md  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/licelformat/: __init__.py  ionetcdf.py  licelfile.py  licelpack.py  licelprofile.py
testdata/: b2651321.051986
tests/: test_licel.py
