[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "licelformat"
version = "1.4.1"
description = "Parser for Licel binary format — lidar measurement profiles (analog & photon counting)"
readme = "README.md"
license = "LGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    { name = "Konstantin Shmirko", email = "physicist2018@gmail.com" },
]
keywords = [
    "lidar",
    "licel",
    "binary",
    "atmospheric",
    "aerosol",
    "remote-sensing",
    "photon-counting",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/physicist2018/licelfile-py"
Repository = "https://github.com/physicist2018/licelfile-py"
Issues = "https://github.com/physicist2018/licelfile-py/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
